dash animation implementation

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,14 +93,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=1006)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 NewWindowWidth=1910
 NewWindowHeight=1006
 
@@ -150,7 +149,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -165,11 +164,12 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/SS_Game
+LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=670.000 Y=199.000
@@ -1064,26 +1064,26 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem1=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem2=/Game/2DSideScrollerBP/Maps/SS_Game
-MRUItem3=/Game/HUD/MainUI
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem5=/Game/HUD/OptionsMenuWidget
-MRUItem6=/Game/HUD/PauseMenuWidget
-MRUItem7=/Game/HUD/StartScreen_Game
-MRUItem8=/Game/HUD/Quit
-MRUItem9=/Game/2DSideScroller/Textures/Shift_Mat
-MRUItem10=/Game/2DSideScroller/Textures/Shift_Mat1
-MRUItem11=/Game/2DSideScroller/Textures/Shift
-MRUItem12=/Game/HUD/Start
-MRUItem13=/Game/HUD/Logo
-MRUItem14=/Game/BP/BP_Coins
-MRUItem15=/Game/2DSideScroller/Sprites/Coin
-MRUItem16=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem17=/Game/2DSideScroller/Data/AnimationState
-MRUItem18=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem19=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem0=/Game/2DSideScroller/Animations/4_Adkins_CharacterDash1
+MRUItem1=/Game/2DSideScroller/Data/AnimationState
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem4=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem5=/Game/2DSideScrollerBP/Maps/SS_Game
+MRUItem6=/Game/HUD/MainUI
+MRUItem7=/Game/HUD/OptionsMenuWidget
+MRUItem8=/Game/HUD/PauseMenuWidget
+MRUItem9=/Game/HUD/StartScreen_Game
+MRUItem10=/Game/HUD/Quit
+MRUItem11=/Game/2DSideScroller/Textures/Shift_Mat
+MRUItem12=/Game/2DSideScroller/Textures/Shift_Mat1
+MRUItem13=/Game/2DSideScroller/Textures/Shift
+MRUItem14=/Game/HUD/Start
+MRUItem15=/Game/HUD/Logo
+MRUItem16=/Game/BP/BP_Coins
+MRUItem17=/Game/2DSideScroller/Sprites/Coin
+MRUItem18=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem19=/Game/2DSideScroller/Sprites/Background_Sprite
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2080,6 +2080,8 @@ ProgressBar.Performance=True
 ProgressBar.Clipping=True
 ProgressBar.Navigation=True
 ProgressBar.Localization=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -2108,6 +2110,29 @@ ProgressBar.Localization=True
 /Game/HUD/StartScreen_Game.StartScreen_Game=0
 /Game/2DSideScroller/Textures/Shift.Shift=0
 /Game/HUD/Quit.Quit=0
+/Game/2DSideScroller/Data/AnimationState.AnimationState=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterDash_Sprite_0.4_Adkins_CharacterDash_Sprite_0=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterDash_Sprite_1.4_Adkins_CharacterDash_Sprite_1=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_0.4_Adkins_CharacterComplete_Sprite_0=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_1.4_Adkins_CharacterComplete_Sprite_1=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_2.4_Adkins_CharacterComplete_Sprite_2=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_3.4_Adkins_CharacterComplete_Sprite_3=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_4.4_Adkins_CharacterComplete_Sprite_4=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_5.4_Adkins_CharacterComplete_Sprite_5=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_6.4_Adkins_CharacterComplete_Sprite_6=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_7.4_Adkins_CharacterComplete_Sprite_7=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_8.4_Adkins_CharacterComplete_Sprite_8=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_9.4_Adkins_CharacterComplete_Sprite_9=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_10.4_Adkins_CharacterComplete_Sprite_10=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_11.4_Adkins_CharacterComplete_Sprite_11=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_15.4_Adkins_CharacterComplete_Sprite_15=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_16.4_Adkins_CharacterComplete_Sprite_16=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_17.4_Adkins_CharacterComplete_Sprite_17=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_18.4_Adkins_CharacterComplete_Sprite_18=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_19.4_Adkins_CharacterComplete_Sprite_19=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_20.4_Adkins_CharacterComplete_Sprite_20=1
+/Game/2DSideScroller/Sprites/4_Adkins_CharacterComplete_Sprite_21.4_Adkins_CharacterComplete_Sprite_21=1
+/Game/2DSideScroller/Animations/4_Adkins_CharacterDash1.4_Adkins_CharacterDash1=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2487,4 +2512,5 @@ Texture2D=
 Texture=
 StreamableRenderAsset=
 Object=
+PaperSprite=
 
