Fixed jump and run animations.

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,16 +93,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1920,Y=1016)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=0,Y=0)
+NewWindowWidth=1910
+NewWindowHeight=1006
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=-8,Y=-8)
-NewWindowWidth=1920
-NewWindowHeight=1016
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1268,28 +1268,33 @@ SS_Game_C.Designer=True
 SS_Game_C.Accessibility=True
 SS_Game_C.Clipping=True
 SS_Game_C.Localization=True
+MapBuildDataRegistry.Lighting=True
+Level_C.Tick=True
+Level_C.Replication=True
+Level_C.Actor=True
+Level_C.Input=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem1=/Game/Data/SS_Game
-MRUItem2=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem2=/Game/2DSideScrollerBP/Animations/PC_Jump
 MRUItem3=/Game/2DSideScrollerBP/Maps/Level_01
-MRUItem4=/Game/2DSideScrollerBP/Maps/_4_Rodriguez_Tileset__1_
-MRUItem5=/Game/Data/Jack_s_Christmas_Run_TITLE_LOGO
-MRUItem6=/Game/Data/Jack_s_Christmas_Run_START
-MRUItem7=/Game/Data/Jack_s_Christmas_Run_OPTIONS
-MRUItem8=/Game/Data/Jack_s_Christmas_Run_BACKGROUND
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem10=/Game/Data/AnimationState
-MRUItem11=/Game/2DSideScrollerBP/Sprites/Level1TileMap
-MRUItem12=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
-MRUItem13=/Game/2DSideScrollerBP/Sprites/Tileset
-MRUItem14=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
-MRUItem15=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Run
-MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Projectile
-MRUItem18=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
-MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Jump
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem5=/Game/2DSideScrollerBP/Maps/Level1TileMap
+MRUItem6=/Game/Data/SS_Game
+MRUItem7=/Game/2DSideScrollerBP/Maps/_4_Rodriguez_Tileset__1_
+MRUItem8=/Game/Data/Jack_s_Christmas_Run_TITLE_LOGO
+MRUItem9=/Game/Data/Jack_s_Christmas_Run_START
+MRUItem10=/Game/Data/Jack_s_Christmas_Run_OPTIONS
+MRUItem11=/Game/Data/Jack_s_Christmas_Run_BACKGROUND
+MRUItem12=/Game/Data/AnimationState
+MRUItem13=/Game/2DSideScrollerBP/Sprites/Level1TileMap
+MRUItem14=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
+MRUItem15=/Game/2DSideScrollerBP/Sprites/Tileset
+MRUItem16=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
+MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Shoot
+MRUItem18=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Projectile
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1308,6 +1313,9 @@ MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Jump
 /Game/Data/SS_Game.SS_Game=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
 /Game/2DSideScrollerBP/Maps/_4_Rodriguez_Tileset__1_._4_Rodriguez_Tileset__1_=1
+/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap_BuiltData.2DSideScrollerExampleMap_BuiltData=1
+/Game/2DSideScrollerBP/Maps/Level1TileMap.Level1TileMap=1
+/Game/2DSideScrollerBP/Maps/Level_1.Level_1:PersistentLevel.Level=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1356,8 +1364,8 @@ RecentlyPlaced=/Game/2DSideScrollerBP/4_Rodriguez_CharacterComplete_Mat.4_Rodrig
 RecentlyPlaced=/Game/2DSideScrollerBP/4_Rodriguez_CharacterComplete.4_Rodriguez_CharacterComplete;
 
 [DetailPropertyExpansion]
-PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" \"Object.Sprite.KeyFrames.KeyFrames[2]\" \"Object.Sprite.KeyFrames.KeyFrames[3]\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+PaperFlipbook="\"Object.Sprite.KeyFrames\" "
+Object="\"Object.Sprite.KeyFrames\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
