--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,6 +100,9 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 PackFilesForLaunch=NoPak
+NewWindowWidth=1910
+NewWindowHeight=1006
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -152,17 +155,13 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.PluginFilters=
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level4
+LastLevel=/Game/2DSideScrollerBP/Maps/Level5
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level3_Map.Level3_Map
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door.Level3Door
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level4_Map.Level4_Map
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1093,40 +1092,40 @@ ExternalImagePicker.TimeStamp=2022.12.12-23.20.55
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level4
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem2=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem3=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem4=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem5=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem7=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial3
-MRUItem11=/Game/2DSideScrollerBP/Maps/Level1
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem1=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem2=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem3=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem5=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem6=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem7=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem8=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial4
+MRUItem11=/Game/2DSideScrollerBP/Maps/Tutorial3
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level4_Map
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level4
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem4=/Game/2DSideScrollerBP/Maps/Level3_Map
-MRUItem5=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem9=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem10=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem12=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door
-MRUItem14=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door
-MRUItem15=/Game/2DSideScrollerBP/Maps/Level2_Map
-MRUItem16=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem17=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem18=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem19=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level5_Map
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem3=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem4=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
+MRUItem5=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem6=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/HpHud
+MRUItem10=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door
+MRUItem12=/Game/Data/AnimationState
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem14=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem15=/Game/2DSideScrollerBP/Maps/Level4_Map
+MRUItem16=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door
+MRUItem17=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem18=/Game/2DSideScrollerBP/Maps/Level3_Map
+MRUItem19=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2074,6 +2073,43 @@ Level3Door_C.Collision=True
 Level3Door_C.Actor=True
 Level3Door_C.Input=True
 Level3Door_C.TransformCommon=True
+Level4Door_C.Tick=True
+Level4Door_C.Replication=True
+Level4Door_C.Rendering=True
+Level4Door_C.Collision=True
+Level4Door_C.Actor=True
+Level4Door_C.Input=True
+Level4Door_C.TransformCommon=True
+Level4_C.Tick=True
+Level4_C.Replication=True
+Level4_C.Actor=True
+Level4_C.Input=True
+TextRenderComponent.HLOD=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+StartMenu_C.Appearance=True
+StartMenu_C.Designer=True
+StartMenu_C.Interaction=True
+StartMenu_C.Performance=True
+StartMenu_C.Layout=True
+StartMenu_C.Behavior=True
+StartMenu_C.Render Transform=True
+StartMenu_C.Accessibility=True
+StartMenu_C.Clipping=True
+StartMenu_C.Navigation=True
+StartMenu_C.Localization=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2130,14 +2166,21 @@ Level3Door_C.TransformCommon=True
 /Game/2DSideScrollerBP/Blueprints/Background.Background=1
 /Game/2DSideScrollerBP/Maps/Tutorial1.Tutorial1:PersistentLevel.Tutorial1=1
 /Game/2DSideScrollerBP/Blueprints/Doors/Level1Door.Level1Door=1
+/Game/2DSideScrollerBP/Maps/Level4.Level4:PersistentLevel.Level4=1
+/Game/2DSideScrollerBP/Maps/Level4_Map.Level4_Map=1
+/Game/Data/AnimationState.AnimationState=1
+/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door.Level4Door=1
+/Game/2DSideScroller/Textures/MenuTextures/LevelSelect.LevelSelect=1
+/Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu=1
+/Game/2DSideScrollerBP/Maps/Level5_Map.Level5_Map=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
-CapsuleComponent=CameraComponent.PostProcess.Lens,
-2DSideScrollerCharacter_C=
+CapsuleComponent=
+2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
 Breakable_Block_C=CameraComponent.PostProcess.Lens,
@@ -2241,6 +2284,11 @@ GI_2DGameInstance_C=
 Background_C=CameraComponent.PostProcess.Lens,
 Level3Door_C=
 DeathPlane_C=CameraComponent.PostProcess.Lens,
+Animation State Machine_6=CameraComponent.PostProcess.Lens,
+Level4Door_C=
+LevelSelect_C=
+PlayerController=
+GameModeBase=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2298,8 +2346,8 @@ ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.Velocity.Velocity\" "
 EnemyBoundaries_C="\"Object.Actor.Tags\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CharacterMovementComponent="\"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.Velocity.Velocity\" "
@@ -2348,8 +2396,16 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Text.TextRenderColor\" "
+StartMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+HpHud_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level5_Map.Level5_Map;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door.Level4Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level4_Map.Level4_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door.Level3Door;
@@ -2364,12 +2420,8 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Background.Background;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Heal.Heal;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block;
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/FullLevel_Map.FullLevel_Map;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_4_TP.Tutorial_4_TP;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_3_TP.Tutorial_3_TP;
 
 [MessageLog]
 LastLogListing=PIE
