--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,10 +155,10 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.PluginFilters=
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level5
+LastLevel=/Game/2DSideScrollerBP/Maps/BossLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -186,7 +186,7 @@ UNR=../../../../../../Users/logan/Documents/GitHub2/GameDesign2/GameDesign2/Game
 BRUSH=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 FBX=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 FBXAnim=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
-GenericImport=../../../../../../Users/logan/Downloads/Level1Menu.PNG
+GenericImport=../../../../../../Users/logan/Downloads/Level5Menu.PNG
 GenericExport=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 GenericOpen=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 GenericSave=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
@@ -1092,40 +1092,40 @@ ExternalImagePicker.TimeStamp=2022.12.12-23.20.55
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem0=/Game/2DSideScrollerBP/Maps/BossLevel
 MRUItem1=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem2=/Game/2DSideScrollerBP/Maps/Level4
-MRUItem3=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem5=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem6=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem7=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem8=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem11=/Game/2DSideScrollerBP/Maps/Tutorial3
+MRUItem2=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem3=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem4=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem5=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem7=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem8=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem9=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem11=/Game/2DSideScrollerBP/Maps/Tutorial4
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level5_Map
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Boss
+MRUItem1=/Game/2DSideScrollerBP/Maps/BossLevel
 MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem3=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem4=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
-MRUItem5=/Game/2DSideScrollerBP/Maps/Level4
-MRUItem6=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/HpHud
-MRUItem10=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door
-MRUItem12=/Game/Data/AnimationState
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem14=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem15=/Game/2DSideScrollerBP/Maps/Level4_Map
-MRUItem16=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem18=/Game/2DSideScrollerBP/Maps/Level3_Map
-MRUItem19=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem4=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/HpHud
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem10=/Game/2DSideScrollerBP/Maps/Level5_Map
+MRUItem11=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem12=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem13=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem14=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem15=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem16=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem17=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door
+MRUItem18=/Game/Data/AnimationState
+MRUItem19=/Game/2DSideScrollerBP/Maps/Level4_Map
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2110,6 +2110,45 @@ StartMenu_C.Accessibility=True
 StartMenu_C.Clipping=True
 StartMenu_C.Navigation=True
 StartMenu_C.Localization=True
+Level5Door_C.TransformCommon=True
+Level5Door_C.Rendering=True
+Level5Door_C.Replication=True
+Level5Door_C.Collision=True
+Level5Door_C.Input=True
+Level5Door_C.Actor=True
+Level5Door_C.Tick=True
+LevelSelect_C.Appearance=True
+LevelSelect_C.Designer=True
+LevelSelect_C.Interaction=True
+LevelSelect_C.Performance=True
+LevelSelect_C.Layout=True
+LevelSelect_C.Behavior=True
+LevelSelect_C.Render Transform=True
+LevelSelect_C.Accessibility=True
+LevelSelect_C.Clipping=True
+LevelSelect_C.Navigation=True
+LevelSelect_C.Localization=True
+Boss_C.Tick=True
+Boss_C.Replication=True
+Boss_C.Rendering=True
+Boss_C.Collision=True
+Boss_C.Actor=True
+Boss_C.Input=True
+InterpToMovementComponent.Control=True
+InterpToMovementComponent.Behaviour=True
+InterpToMovementComponent.Simulation=True
+InterpToMovementComponent.PlanarMovement=True
+InterpToMovementComponent.MovementComponent=True
+InterpToMovementComponent.Tags=True
+InterpToMovementComponent.ComponentReplication=True
+InterpToMovementComponent.Activation=True
+InterpToMovementComponent.Variable=True
+InterpToMovementComponent.Cooking=True
+InterpToMovementComponent.Sockets=True
+InterpToMovementComponent.ComponentTick=True
+InterpToMovementComponent.Events=True
+Boss_C.TransformCommon=True
+Boss_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2173,6 +2212,9 @@ StartMenu_C.Localization=True
 /Game/2DSideScroller/Textures/MenuTextures/LevelSelect.LevelSelect=1
 /Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu=1
 /Game/2DSideScrollerBP/Maps/Level5_Map.Level5_Map=1
+/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter=1
+/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door.Level5Door=1
+/Game/2DSideScrollerBP/Blueprints/Boss.Boss=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2180,7 +2222,7 @@ InstalledPlugins=XRVisualization
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=
-2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens,
+2DSideScrollerCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
 Breakable_Block_C=CameraComponent.PostProcess.Lens,
@@ -2289,6 +2331,11 @@ Level4Door_C=
 LevelSelect_C=
 PlayerController=
 GameModeBase=
+Orb_Shooter_C=CameraComponent.PostProcess.Lens,
+Level5Door_C=
+InterpToMovementComponent=CameraComponent.PostProcess.Lens,
+Boss_C=CameraComponent.PostProcess.Lens,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2336,14 +2383,14 @@ ActorComponent=
 Object=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PaperSpriteComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
-StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
-MovementComponent="\"Object.Velocity.Velocity\" "
+MovementComponent=
 EnemyBoundaries_C="\"Object.Actor.Tags\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -2387,7 +2434,7 @@ Pawn=
 2DSideScrollerCharacter_C=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 DeathMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -2400,18 +2447,22 @@ HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Trans
 TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Text.TextRenderColor\" "
 StartMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 HpHud_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+LevelSelect_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+InterpToMovementComponent=
 
 [PlacementMode]
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level5_Map.Level5_Map;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Boss.Boss;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door.Level5Door;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy;
+RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level5_Map.Level5_Map;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door.Level4Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level4_Map.Level4_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door.Level3Door;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level3_Map.Level3_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door.Level2Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
@@ -2420,8 +2471,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Background.Background;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Heal.Heal;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block;
 
 [MessageLog]
 LastLogListing=PIE
