fnished the game

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,13 +155,21 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.PluginFilters=
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/BossLevel
+LastLevel=/Game/2DSideScrollerBP/Maps/StartMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Boss.Boss
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/BossLevel_Map.BossLevel_Map
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/BossButton.BossButton
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/BossDeath.BossDeath
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/WinMenu.WinMenu
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect.LevelSelect
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1092,40 +1100,40 @@ ExternalImagePicker.TimeStamp=2022.12.12-23.20.55
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/BossLevel
-MRUItem1=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem2=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem3=/Game/2DSideScrollerBP/Maps/Level5
-MRUItem4=/Game/2DSideScrollerBP/Maps/Level4
-MRUItem5=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem7=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem8=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem9=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem11=/Game/2DSideScrollerBP/Maps/Tutorial4
+MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem1=/Game/2DSideScrollerBP/Maps/BossLevel
+MRUItem2=/Game/2DSideScrollerBP/Maps/WinMenu
+MRUItem3=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem4=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem5=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem6=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem8=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem9=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem10=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem11=/Game/2DSideScrollerBP/Maps/Tutorial2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Boss
-MRUItem1=/Game/2DSideScrollerBP/Maps/BossLevel
-MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem4=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/HpHud
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem10=/Game/2DSideScrollerBP/Maps/Level5_Map
-MRUItem11=/Game/2DSideScrollerBP/Maps/Level5
-MRUItem12=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem13=/Game/2DSideScrollerBP/Maps/Level4
-MRUItem14=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem15=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem16=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door
-MRUItem18=/Game/Data/AnimationState
-MRUItem19=/Game/2DSideScrollerBP/Maps/Level4_Map
+MRUItem0=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem1=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem2=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
+MRUItem3=/Game/2DSideScrollerBP/Maps/BossLevel
+MRUItem4=/Game/2DSideScrollerBP/Maps/WinMenu
+MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/WinMenu
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/BossDeath
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/BossButton
+MRUItem8=/Game/2DSideScrollerBP/Maps/BossLevel_Map
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/Boss
+MRUItem11=/Game/2DSideScroller/Textures/UFO1
+MRUItem12=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/HpHud
+MRUItem16=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem17=/Game/2DSideScrollerBP/Maps/Level5_Map
+MRUItem18=/Game/2DSideScrollerBP/Maps/Level5
+MRUItem19=/Game/2DSideScrollerBP/Maps/Level4
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2149,6 +2157,24 @@ InterpToMovementComponent.ComponentTick=True
 InterpToMovementComponent.Events=True
 Boss_C.TransformCommon=True
 Boss_C.Default=True
+BossButton_C.Tick=True
+BossButton_C.Replication=True
+BossButton_C.Rendering=True
+BossButton_C.Collision=True
+BossButton_C.Actor=True
+BossButton_C.Input=True
+BossDeath_C.Tick=True
+BossDeath_C.Replication=True
+BossDeath_C.Rendering=True
+BossDeath_C.Collision=True
+BossDeath_C.Actor=True
+BossDeath_C.Input=True
+BossDeath_C.TransformCommon=True
+BossButton_C.TransformCommon=True
+WinMenu_C.Tick=True
+WinMenu_C.Replication=True
+WinMenu_C.Actor=True
+WinMenu_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2221,7 +2247,7 @@ InstalledPlugins=XRVisualization
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
-CapsuleComponent=
+CapsuleComponent=CameraComponent.PostProcess.Lens,
 2DSideScrollerCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
@@ -2336,6 +2362,9 @@ Level5Door_C=
 InterpToMovementComponent=CameraComponent.PostProcess.Lens,
 Boss_C=CameraComponent.PostProcess.Lens,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+BossDeath_C=CameraComponent.PostProcess.Lens,
+BossButton_C=
+WinMenu_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2380,21 +2409,21 @@ PreserveScaleRatio=False
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PaperSpriteComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+ShapeComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 MovementComponent=
 EnemyBoundaries_C="\"Object.Actor.Tags\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CharacterMovementComponent="\"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.Velocity.Velocity\" "
@@ -2451,12 +2480,15 @@ LevelSelect_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Trans
 InterpToMovementComponent=
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/BossButton.BossButton;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/BossDeath.BossDeath;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Boss.Boss;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door.Level5Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Heal.Heal;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Boss.Boss;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level5Door.Level5Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level5_Map.Level5_Map;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level4Door.Level4Door;
@@ -2468,9 +2500,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door.Level2Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door.Level1Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Background.Background;
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
 
 [MessageLog]
 LastLogListing=PIE
