--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,7 +93,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=1006)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
@@ -101,7 +101,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1910
 NewWindowHeight=1006
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -110,7 +109,7 @@ MinimumOrthographicZoom=250.000000
 bAllowArcballRotate=False
 bAllowScreenRotate=False
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
-bEnableLayerSnap=False
+bEnableLayerSnap=True
 ActiveSnapLayerIndex=0
 PreserveNonUniformScale=False
 bUseLegacyPostEditBehavior=False
@@ -150,7 +149,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -165,7 +164,7 @@ CleanShutdown=True
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
 WindowSize=X=1283.000 Y=723.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1385,10 +1384,23 @@ SS_GAME_C.Localization=True
 SS_GAME_C.Tick=True
 SS_GAME_C.Replication=True
 SS_GAME_C.Actor=True
+PaperTileMapComponent.TransformCommon=True
+PaperTileMapComponent.Warning=True
+PaperTileMapComponent.Tile Map=True
+PaperTileMapComponent.Materials=True
+PaperTileMapComponent.Physics=True
+PaperTileMapComponent.Collision=True
+PaperTileMapComponent.Lighting=True
+PaperTileMapComponent.Rendering=True
+PaperTileMapComponent.Navigation=True
+PaperTileMapComponent.VirtualTexture=True
+PaperTileMapComponent.Tags=True
+PaperTileMapComponent.Activation=True
+PaperTileMapComponent.Cooking=True
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/SS_GAME
-MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem1=/Game/2DSideScrollerBP/Maps/SS_GAME
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1396,6 +1408,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Sprites/Level2.Level2;
 RecentlyPlaced=/Game/2DSideScroller/title/StartButton.StartButton;
 RecentlyPlaced=/Game/2DSideScroller/Sprites/Border.Border;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Ring.Ring;
@@ -1411,26 +1424,26 @@ RecentlyPlaced=/Game/2DSideScrollerBP/4_Border_Character-Idle.4_Border_Character
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/SS_GAME
-MRUItem1=/Game/2DSideScroller/title/SS_GAME
-MRUItem2=/Game/2DSideScroller/title/background_elements
-MRUItem3=/Game/2DSideScroller/title/NewWidgetBlueprint
-MRUItem4=/Game/2DSideScroller/title/StartButton
-MRUItem5=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileMap
-MRUItem6=/Game/2DSideScroller/Sprites/Border
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/Ring
-MRUItem9=/Game/Data/AnimationState
-MRUItem10=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileSet
-MRUItem11=/Game/2DSideScroller/Sprites/4_Border_TileSet_Sprite
-MRUItem12=/Game/2DSideScroller/Sprites/4_Border_TileSet
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem14=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem15=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem16=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem17=/Game/2DSideScroller/Animations/Ring
-MRUItem18=/Game/2DSideScroller/Animations/PC_Run
-MRUItem19=/Game/2DSideScroller/Animations/PC_Jump
+MRUItem0=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileMap
+MRUItem1=/Game/2DSideScroller/Sprites/Level2
+MRUItem2=/Game/2DSideScroller/Sprites/Border
+MRUItem3=/Game/2DSideScroller/Sprites/TileSet2_TileSet
+MRUItem4=/Game/2DSideScroller/Sprites/TileSet2
+MRUItem5=/Game/2DSideScrollerBP/Maps/SS_GAME
+MRUItem6=/Game/2DSideScroller/title/SS_GAME
+MRUItem7=/Game/2DSideScroller/title/background_elements
+MRUItem8=/Game/2DSideScroller/title/NewWidgetBlueprint
+MRUItem9=/Game/2DSideScroller/title/StartButton
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Ring
+MRUItem12=/Game/Data/AnimationState
+MRUItem13=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileSet
+MRUItem14=/Game/2DSideScroller/Sprites/4_Border_TileSet_Sprite
+MRUItem15=/Game/2DSideScroller/Sprites/4_Border_TileSet
+MRUItem16=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem17=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem18=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem19=/Game/2DSideScroller/Animations/PC_Hurt
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/4_Border_TileSet.4_Border_TileSet=1
@@ -1457,14 +1470,16 @@ MRUItem19=/Game/2DSideScroller/Animations/PC_Jump
 /Game/2DSideScroller/title/SS_GAME.SS_GAME=1
 /Game/2DSideScroller/title/SONIC_THE_HEDGEHOG.SONIC_THE_HEDGEHOG=1
 /Game/2DSideScrollerBP/Maps/SS_GAME.SS_GAME:PersistentLevel.SS_GAME=1
+/Game/2DSideScroller/Sprites/TileSet2_TileSet.TileSet2_TileSet=1
+/Game/2DSideScroller/Sprites/Level2.Level2=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[9]\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object=
 SpringArmComponent="\"Object.Camera.SocketOffset\" "
 SceneComponent=
 ActorComponent=
-PaperTileSet="\"Object.TileSet.TileSize\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0].Vertices.Vertices[9]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0].Vertices.Vertices[11]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[1].Vertices.Vertices[12]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
+PaperTileSet="\"Object.TileSet.TileSize\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[1].Vertices.Vertices[2]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0].Vertices.Vertices[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[0]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
