--- a/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
@@ -8,5 +8,5 @@ HostOverride=
 Provider=Git
 
 [GitSourceControl.GitSourceControlSettings]
-BinaryPath=C:/Git/bin/git.exe
+BinaryPath=C:/Program Files/Git/bin/git.exe
 
